--- a/FizzBuzz/FizzBuzz.csproj
+++ b/FizzBuzz/FizzBuzz.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.4"/>
+    </ItemGroup>
+
 </Project>
